--- a/src/pages/Layout/Layout.module.scss
+++ b/src/pages/Layout/Layout.module.scss
@@ -2,4 +2,14 @@
     display: flex;
     justify-content: center;
     padding-top: 2%;
+    padding: 0 15px;
+}
+
+.header {
+    width: 100%;
+    background-color: var(--white);
+
+    .donwload {
+
+    }
 }
